Fixed additional images
added "." before the images src value

--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ main {
 }
 
 #hero-img {
-    background-image: url("/images/image-hero-desktop.png");
+    background-image: url("./images/image-hero-desktop.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
@@ -219,7 +219,7 @@ span>button {
         height: 650px;
     }
     #hero-img {
-        background-image: url("/images/image-hero-mobile.png");
+        background-image: url("./images/image-hero-mobile.png");
         background-position: center;
         background-repeat: no-repeat;
         background-size: contain;
