--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ nav a {
     position: absolute;
     padding: 0 30px;
     width: 100%;
+    top: 2.2em;
 }
  #nav-bar > a {
     padding: 14px 16px;
@@ -253,7 +254,7 @@ span>button {
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-top: 25px;
+        margin-top: 50px;
     }
 
     .flex-container {
